# HearthServer

./: .gitignore  CHANGELOG.md  Directory.Build.props  HearthServer.sln  README.md
.github/workflows/: release.yml
src/server/Hearth.Persistence/: Hearth.Persistence.csproj  HearthDb.cs  README.md
src/server/Hearth.Rcon/: Hearth.Rcon.csproj  README.md  RconServer.cs
src/server/Hearth.SourceQuery/: Hearth.SourceQuery.csproj  README.md  SourceQueryServer.cs
src/server/HearthServer/: HearthServer.csproj  Program.cs  README.md  appsettings.json
src/server/HearthServer/Configuration/: HearthServerOptions.cs
src/server/HearthServer/Services/: AdminJoinTicketService.cs  ChatService.cs  GameProcessProbe.cs  HeartbeatWatchdogService.cs  HearthHttpService.cs  HearthLogTailService.cs  HearthProcessSupervisorService.cs  HearthVersionInfo.cs  (+11 more)
src/shared/Hearth.Abstractions/: Hearth.Abstractions.csproj  IHearthService.cs  README.md
src/shared/Hearth.Protocol/: FrameCodec.cs  Hearth.Protocol.csproj  Protocol.cs  README.md
src/tools/Hearth.SaveGuard/: Cargo.toml
src/tools/Hearth.SaveGuard/src/: lib.rs  main.rs
tests/Hearth.Integration.Tests/: Hearth.Integration.Tests.csproj  PlaceholderTests.cs
tests/Hearth.Protocol.Tests/: FrameCodecTests.cs  Hearth.Protocol.Tests.csproj  ModFrameTests.cs  ProtocolVersionTests.cs
tests/HearthServer.Tests/: AdminJoinTicketServiceTests.cs  HearthDbTests.cs  HearthLogTailServiceTests.cs  HearthProcessSupervisorServiceTests.cs  HearthServer.Tests.csproj  RconHostedServiceTests.cs  SaveOrchestratorTests.cs  SaveSlotNormalizerTests.cs
(+1 files in other folders)
