[package]
name = "hearth-save-guard"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["HumanGenome"]
license = "MIT"
description = "Fail-closed Bellwright player-record save protection for Hearth"

[[bin]]
name = "HearthSaveGuard"
path = "src/main.rs"

[dependencies]
oozextract = "0.5"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
